chore(deps): update to 10.56.0 Carbon and latest gatsby theme prerelease for v11

--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -5,13 +5,7 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
-import {
-  Tabs,
-  unstable_TabList as TabList,
-  Tab,
-  unstable_TabPanels as TabPanels,
-  unstable_TabPanel as TabPanel,
-} from '@carbon/react';
+import { Tabs, TabList, Tab, TabPanels, TabPanel } from '@carbon/react';
 
 <PageDescription>
 
