--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -142,13 +142,13 @@ centered in the page within the parent container.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo">
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">2 of 4</div>
-          <div class="bx-demo--col">3 of 4</div>
-          <div class="bx-demo--col">4 of 4</div>
+    <div className="grid-demo override override">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">2 of 4</div>
+          <div class="cds--col">3 of 4</div>
+          <div class="cds--col">4 of 4</div>
         </div>
       </div>
     </div>
@@ -222,138 +222,138 @@ columns within our system.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo">
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-16">
-            <div class="bx-demo-lg">16</div>
-            <div class="bx-demo-md">8</div>
-            <div class="bx-demo-sm">4</div>
+    <div className="grid-demo override override">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col-lg-16">
+            <div class="cds-lg">16</div>
+            <div class="cds-md">8</div>
+            <div class="cds-sm">4</div>
           </div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-15 bx-demo--col-md-7 bx-demo--col-sm-3">
-            <div class="bx-demo-lg">15</div>
-            <div class="bx-demo-md">7</div>
-            <div class="bx-demo-sm">3</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-15 cds--col-md-7 cds--col-sm-3">
+            <div class="cds-lg">15</div>
+            <div class="cds-md">7</div>
+            <div class="cds-sm">3</div>
           </div>
-          <div class="bx-demo--col-sm-1 bx-demo--col-md-1 bx-demo--col-lg-1">1</div>
+          <div class="cds--col-sm-1 cds--col-md-1 cds--col-lg-1">1</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-14 bx-demo--col-md-6 hide-sm">
-            <div class="bx-demo-lg">14</div>
-            <div class="bx-demo-md">6</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-14 cds--col-md-6 hide-sm">
+            <div class="cds-lg">14</div>
+            <div class="cds-md">6</div>
           </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-2 hide-sm">2</div>
+          <div class="cds--col-lg-2 cds--col-md-2 hide-sm">2</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-13 bx-demo--col-md-5 hide-sm">
-            <div class="bx-demo-lg">13</div>
-            <div class="bx-demo-md">5</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-13 cds--col-md-5 hide-sm">
+            <div class="cds-lg">13</div>
+            <div class="cds-md">5</div>
           </div>
-          <div class="bx-demo--col-lg-3 bx-demo--col-md-3 hide-sm">3</div>
+          <div class="cds--col-lg-3 cds--col-md-3 hide-sm">3</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-12 hide-md">12</div>
-          <div class="bx-demo--col-lg-4 hide-md">4</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-12 hide-md">12</div>
+          <div class="cds--col-lg-4 hide-md">4</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-11 hide-md">11</div>
-          <div class="bx-demo--col-lg-5 hide-md">5</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-11 hide-md">11</div>
+          <div class="cds--col-lg-5 hide-md">5</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-10 hide-md">10</div>
-          <div class="bx-demo--col-lg-6 hide-md">6</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-10 hide-md">10</div>
+          <div class="cds--col-lg-6 hide-md">6</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-9 hide-md">9</div>
-          <div class="bx-demo--col-lg-7 hide-md">7</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-9 hide-md">9</div>
+          <div class="cds--col-lg-7 hide-md">7</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-8 bx-demo--col-md-4 bx-demo--col-sm-2">
-            <div class="bx-demo-lg">8</div>
-            <div class="bx-demo-md">4</div>
-            <div class="bx-demo-sm">2</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-8 cds--col-md-4 cds--col-sm-2">
+            <div class="cds-lg">8</div>
+            <div class="cds-md">4</div>
+            <div class="cds-sm">2</div>
           </div>
-          <div class="bx-demo--col-lg-8 bx-demo--col-md-4 bx-demo--col-sm-2">
-            <div class="bx-demo-lg">8</div>
-            <div class="bx-demo-md">4</div>
-            <div class="bx-demo-sm">2</div>
-          </div>
-        </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-4 bx-demo--col-md-2 bx-demo--col-sm-1">
-            <div class="bx-demo-lg">4</div>
-            <div class="bx-demo-md">2</div>
-            <div class="bx-demo-sm">1</div>
-          </div>
-          <div class="bx-demo--col-lg-4 bx-demo--col-md-2 bx-demo--col-sm-1">
-            <div class="bx-demo-lg">4</div>
-            <div class="bx-demo-md">2</div>
-            <div class="bx-demo-sm">1</div>
-          </div>
-          <div class="bx-demo--col-lg-4 bx-demo--col-md-2 bx-demo--col-sm-1">
-            <div class="bx-demo-lg">4</div>
-            <div class="bx-demo-md">2</div>
-            <div class="bx-demo-sm">1</div>
-          </div>
-          <div class="bx-demo--col-lg-4 bx-demo--col-md-2 bx-demo--col-sm-1">
-            <div class="bx-demo-lg">4</div>
-            <div class="bx-demo-md">2</div>
-            <div class="bx-demo-sm">1</div>
+          <div class="cds--col-lg-8 cds--col-md-4 cds--col-sm-2">
+            <div class="cds-lg">8</div>
+            <div class="cds-md">4</div>
+            <div class="cds-sm">2</div>
           </div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-4 cds--col-md-2 cds--col-sm-1">
+            <div class="cds-lg">4</div>
+            <div class="cds-md">2</div>
+            <div class="cds-sm">1</div>
           </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
+          <div class="cds--col-lg-4 cds--col-md-2 cds--col-sm-1">
+            <div class="cds-lg">4</div>
+            <div class="cds-md">2</div>
+            <div class="cds-sm">1</div>
           </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
+          <div class="cds--col-lg-4 cds--col-md-2 cds--col-sm-1">
+            <div class="cds-lg">4</div>
+            <div class="cds-md">2</div>
+            <div class="cds-sm">1</div>
           </div>
-         <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
-          </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
-          </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
-          </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
-          </div>
-          <div class="bx-demo--col-lg-2 bx-demo--col-md-1 hide-sm">
-            <div class="bx-demo-lg">2</div>
-            <div class="bx-demo-md">1</div>
+          <div class="cds--col-lg-4 cds--col-md-2 cds--col-sm-1">
+            <div class="cds-lg">4</div>
+            <div class="cds-md">2</div>
+            <div class="cds-sm">1</div>
           </div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
-          <div class="bx-demo--col-lg-1 hide-md">1</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+         <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+          <div class="cds--col-lg-2 cds--col-md-1 hide-sm">
+            <div class="cds-lg">2</div>
+            <div class="cds-md">1</div>
+          </div>
+        </div>
+        <div class="cds--row">
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
+          <div class="cds--col-lg-1 hide-md">1</div>
         </div>
     </div>
   </div>
@@ -457,30 +457,30 @@ need and every column will be the same width.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo">
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
-          <div class="bx-demo--col hide-md">1 of 8</div>
+    <div className="grid-demo override override">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
+          <div class="cds--col hide-md">1 of 8</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 2</div>
-          <div class="bx-demo--col">1 of 2</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 2</div>
+          <div class="cds--col">1 of 2</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 1</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 1</div>
         </div>
       </div>
     </div>
@@ -576,13 +576,13 @@ Use vertical helpers here.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo grid-demo--wide">
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+    <div className="grid-demo override override grid-demo--wide">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
         </div>
       </div>
     </div>
@@ -655,13 +655,13 @@ Use vertical helpers here.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo grid-demo--narrow">
-      <div class="bx-demo--grid bx-demo--grid--narrow">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+    <div className="grid-demo override override override override grid-demo--narrow">
+      <div class="cds--grid cds--grid--narrow">
+        <div class="cds--row">
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
         </div>
       </div>
     </div>
@@ -726,13 +726,13 @@ Use vertical helpers here.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo grid-demo--condensed">
-      <div class="bx-demo--grid bx-demo--grid--condensed">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col "><div class="grid-demo-content"></div></div>
+    <div className="grid-demo override override grid-demo--condensed">
+      <div class="cds--grid cds--grid--condensed">
+        <div class="cds--row">
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col"><div class="grid-demo-content"></div></div>
+          <div class="cds--col "><div class="grid-demo-content"></div></div>
         </div>
       </div>
     </div>
@@ -851,31 +851,31 @@ product.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo">
+    <div className="grid-demo override override">
       <aside class="side-nav"></aside>
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row hide-sm">
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
+      <div class="cds--grid">
+        <div class="cds--row hide-sm">
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 2</div>
-          <div class="bx-demo--col">1 of 2</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 2</div>
+          <div class="cds--col">1 of 2</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 1</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 1</div>
         </div>
       </div>
     </div>
@@ -896,31 +896,31 @@ product.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo">
+    <div className="grid-demo override override">
       <aside class="side-nav side-nav--expanded"></aside>
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
-          <div class="bx-demo--col hide-sm">1 of 8</div>
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
+          <div class="cds--col hide-sm">1 of 8</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
-          <div class="bx-demo--col">1 of 4</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
+          <div class="cds--col">1 of 4</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 2</div>
-          <div class="bx-demo--col">1 of 2</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 2</div>
+          <div class="cds--col">1 of 2</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">1 of 1</div>
+        <div class="cds--row">
+          <div class="cds--col">1 of 1</div>
         </div>
       </div>
     </div>
@@ -958,55 +958,55 @@ increase the left margin of a column by \* columns. For example,
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo">
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-15 bx-demo--col-lg-1 bx-demo--offset-md-7 bx-demo--col-md-1 bx-demo--offset-sm-3 bx-demo--col-sm-1">1</div>
+    <div className="grid-demo override override">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--offset-lg-15 cds--col-lg-1 cds--offset-md-7 cds--col-md-1 cds--offset-sm-3 cds--col-sm-1">1</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-14 bx-demo--col-lg-2 bx-demo--offset-md-6 bx-demo--col-md-2 bx-demo--offset-sm-2 bx-demo--col-sm-2">2</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-14 cds--col-lg-2 cds--offset-md-6 cds--col-md-2 cds--offset-sm-2 cds--col-sm-2">2</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-13 bx-demo--col-lg-3 bx-demo--offset-md-5 bx-demo--col-md-3 bx-demo--offset-sm-1 bx-demo--col-sm-3">3</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-13 cds--col-lg-3 cds--offset-md-5 cds--col-md-3 cds--offset-sm-1 cds--col-sm-3">3</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-12 bx-demo--col-lg-4 bx-demo--offset-md-4 bx-demo--col-md-4 bx-demo--col-sm-4">4</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-12 cds--col-lg-4 cds--offset-md-4 cds--col-md-4 cds--col-sm-4">4</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-11 bx-demo--col-lg-5 bx-demo--offset-md-3 bx-demo--col-md-5 hide-sm">5</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-11 cds--col-lg-5 cds--offset-md-3 cds--col-md-5 hide-sm">5</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-10 bx-demo--col-lg-6 bx-demo--offset-md-2 bx-demo--col-md-6 hide-sm">6</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-10 cds--col-lg-6 cds--offset-md-2 cds--col-md-6 hide-sm">6</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-9 bx-demo--col-lg-7 bx-demo--offset-md-1 bx-demo--col-md-7 hide-sm">7</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-9 cds--col-lg-7 cds--offset-md-1 cds--col-md-7 hide-sm">7</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-8 bx-demo--col-lg-8 hide-sm">8</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-8 cds--col-lg-8 hide-sm">8</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-7 bx-demo--col-lg-9 hide-md">9</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-7 cds--col-lg-9 hide-md">9</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-6 bx-demo--col-lg-10 hide-md">10</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-6 cds--col-lg-10 hide-md">10</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-5 bx-demo--col-lg-11 hide-md">11</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-5 cds--col-lg-11 hide-md">11</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-4 bx-demo--col-lg-12 hide-md">12</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-4 cds--col-lg-12 hide-md">12</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-3 bx-demo--col-lg-13 hide-md">13</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-3 cds--col-lg-13 hide-md">13</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-2 bx-demo--col-lg-14 hide-md">14</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-2 cds--col-lg-14 hide-md">14</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--offset-lg-1 bx-demo--col-lg-15 hide-md">15</div>
+        <div class="cds--row">
+          <div class="cds--offset-lg-1 cds--col-lg-15 hide-md">15</div>
         </div>
-        <div class="bx-demo--row">
-          <div class="bx-demo--col-lg-16 hide-md">16</div>
+        <div class="cds--row">
+          <div class="cds--col-lg-16 hide-md">16</div>
         </div>
       </div>
     </div>
@@ -1110,13 +1110,13 @@ modifier class. This will allow your grid to span infinitely.
 <Row>
   <Column noGutterSm>
     <div className="grid-demo--bleed">
-      <div className="grid-demo grid-demo--wide">
-        <div class="bx-demo--grid">
-          <div class="bx-demo--row">
-            <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-            <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-            <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
-            <div class="bx-demo--col "><div class="grid-demo-content"></div></div>
+      <div className="grid-demo override override grid-demo--wide">
+        <div class="cds--grid">
+          <div class="cds--row">
+            <div class="cds--col"><div class="grid-demo-content"></div></div>
+            <div class="cds--col"><div class="grid-demo-content"></div></div>
+            <div class="cds--col"><div class="grid-demo-content"></div></div>
+            <div class="cds--col "><div class="grid-demo-content"></div></div>
           </div>
         </div>
       </div>
@@ -1166,129 +1166,129 @@ but there is an issue to add it.
 
 <Row>
   <Column noGutterSm>
-    <div className="grid-demo aspect-ratio-demo">
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--2x1">
-              <div class="bx-demo--aspect-ratio--object">
+    <div className="grid-demo override override aspect-ratio-demo">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--2x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">2:1</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--2x1">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--2x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">2:1</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--2x1">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--2x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">2:1</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--2x1">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--2x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">2:1</div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--16x9">
-              <div class="bx-demo--aspect-ratio--object">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--16x9">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">16:9</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--16x9">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--16x9">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">16:9</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--16x9">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--16x9">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">16:9</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--16x9">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--16x9">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">16:9</div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">
-             <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--4x3">
-              <div class="bx-demo--aspect-ratio--object">
+      <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col">
+             <div class="cds--aspect-ratio cds--aspect-ratio--4x3">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">4:3</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-             <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--4x3">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+             <div class="cds--aspect-ratio cds--aspect-ratio--4x3">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">4:3</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-             <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--4x3">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+             <div class="cds--aspect-ratio cds--aspect-ratio--4x3">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">4:3</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--4x3">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--4x3">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">4:3</div>
               </div>
             </div>
           </div>
         </div>
       </div>
-       <div class="bx-demo--grid">
-        <div class="bx-demo--row">
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--1x1">
-              <div class="bx-demo--aspect-ratio--object">
+       <div class="cds--grid">
+        <div class="cds--row">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--1x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">1:1</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--1x1">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--1x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">1:1</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--1x1">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--1x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">1:1</div>
               </div>
             </div>
           </div>
-          <div class="bx-demo--col">
-            <div class="bx-demo--aspect-ratio bx-demo--aspect-ratio--1x1">
-              <div class="bx-demo--aspect-ratio--object">
+          <div class="cds--col">
+            <div class="cds--aspect-ratio cds--aspect-ratio--1x1">
+              <div class="cds--aspect-ratio--object">
                 <div class="aspect-ratio-content">1:1</div>
               </div>
             </div>
