Image and copy updates
• Updated h2 Behavior heading to Universal Behaviors
• Updated pattern image and caption for Actionable notifications
• Updated pattern typo from inline to toast and rewrote actionable dismissible section

--- a/src/pages/patterns/notification-pattern/index.mdx
+++ b/src/pages/patterns/notification-pattern/index.mdx
@@ -267,23 +267,23 @@ button. A small “x” in the top right corner is used to dismiss inline
 notifications. Including the close button is optional and should not be included
 if it is critical for a user to read or interact with the notification.
 
-Actionable notifications styled as inline notifications can only one action
-button. If the toast includes an action button, then the notification should
-remain on screen until the user dismisses it. With the notification remaining
-open, the user has enough time to interact with the button without the toast
-closing too soon.
+Actionable notifications styled as toast notifications can only contain one
+tertiary button. If the toast includes an action button, then the notification
+should remain on screen until the user dismisses it. With the notification
+remaining open, the user has enough time to interact with the button without the
+toast closing too soon.
 
 #### Best practices:
 
-- Actionable notification should persist until user dismisses to give users time
-  in interact with the notification.
+- An actionable notification should persist until user dismisses it, allowing
+  users time to interact with the notification.
 - Only one action per notification.
 - Limit action labels to two words or less.
 
 <Row>
 <Column colLg={8}>
 
-![Banner notification in a product](/images/8_actionable_toast.png)
+![Actionable notification styled as a toast](/images/8_actionable_toast.png)
 
 <Caption>Actionable notification styled as a toast notification</Caption>
 
