--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -24,7 +24,7 @@ actionable notifications.
 <AnchorLink>Inline notifications</AnchorLink>
 <AnchorLink>Toast notifications</AnchorLink>
 <AnchorLink>Actionable notifications</AnchorLink>
-<AnchorLink>Behaviors</AnchorLink>
+<AnchorLink>Universal behaviors</AnchorLink>
 <AnchorLink>Modifiers</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
@@ -51,7 +51,7 @@ although some product teams also support banners and notification centers.
 | -------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | [Inline](#inline-notifications)        | Inline notifications show up in task flows, to notify users of the status of an action. They usually appear at the top of the primary content area.              |
 | [Toast](#toast-notifications)          | Toasts are non-modal, time-based window elements used to display short messages; they usually appear at the top of the screen and disappear after a few seconds. |
-| [Actionable](#actionable-notification) | Actionable notifications allow for interactive elements within a notification styled like an inline or toast notification.                                        |
+| [Actionable](#actionable-notification) | Actionable notifications allow for interactive elements within a notification styled like an inline or toast notification.                                       |
 
 ## Live demo
 
@@ -353,7 +353,7 @@ open, the user has enough time to interact with the button without the toast
 closing too soon. Refer to [toast notifications](#toast-notifications) for
 further information.
 
-## Behaviors
+## Universal behaviors
 
 ### Interactions
 
