--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -233,9 +233,7 @@ inputs, they should supplement the error state on that specific input field.
 </Column>
 </Row>
 
-### Behavior
-
-#### Dismissal
+### Dismissal
 
 Inline notifications do not dismiss automatically. They persist on the page
 until the user dismisses them or takes action that resolves the notification.
@@ -288,9 +286,7 @@ dismissed.
 </Column>
 </Row>
 
-### Behavior
-
-#### Dismissal
+### Dismissal
 
 Toast notifications persist by default. Toasts do have the option to timeout and
 dismiss automatically after five seconds on the screen. They can also include a
@@ -340,9 +336,7 @@ are alternative routes to navigate to the link destination.
 </Column>
 </Row>
 
-### Behavior
-
-#### Dismissal
+### Dismissal
 
 All notifications, including actionable, persist by default until a user
 dismissed them. If using inline styling refer to
