--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -130,7 +130,7 @@ what it is being used for. For more information about trigger buttons, see the
 ### Main elements
 
 Heading, body, and footer content can vary based on your usecase. To see
-examples of content used in popovers, visit the
+examples of content used in popovers, see the
 [disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
 
 ### Overflow content
