--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -415,11 +415,11 @@ label.
 </Column>
 </Row>
 
-<InlineNotification>
+<Caption>
   Note: Tabs with an icon is an example of a pattern. It is not currently
   implemented by default in the component, it is instead enabled through the
   composable component API. This requires additional styling and configuration.
-</InlineNotification>
+</Caption>
 
 ### Icon-only tabs
 
